# esp32-gt1000core-sysex-controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  button_controller.c  button_controller.h  display.c  display.h  gt1000.c  gt1000.h  gt1000_param.c  gt1000_param.h  idf_component.yml  led.c  led.h  main.c  sysex.c  sysex.h  uart.c  uart.h  ui_controller.c  ui_controller.h
